<resources>
    <string name="app_name">PokeApp</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_pokemon_list">PokemonDeck</string>
    <string name="title_pokemon_detail">Pokemon Detail</string>

    // Detail fragment labels
    <string name="weight_label">Weight:</string>
    <string name="order_label">Order:</string>
    <string name="is_default_label">Is default:</string>
    <string name="height_label">Height:</string>
    <string name="experience_label">Experience:</string>
    <string name="id_label">Id:</string>
</resources>