<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="pokemonViewModel"
            type="com.example.pokeapp.models.PokemonViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_label_text_view"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:text="@string/id_label"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textIsSelectable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/id_attr_text_view"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textIsSelectable="true"
            app:layout_constraintLeft_toRightOf="@+id/id_label_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/experience_label_text_view"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="@string/experience_label"
            android:textIsSelectable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_label_text_view" />

        <TextView
            android:id="@+id/experience_attr_text_view"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textIsSelectable="true"
            app:layout_constraintLeft_toRightOf="@+id/experience_label_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/id_attr_text_view" />

        <TextView
            android:id="@+id/height_label_text_view"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="@string/height_label"
            android:textIsSelectable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/experience_label_text_view" />

        <TextView
            android:id="@+id/height_attr_text_view"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textIsSelectable="true"
            app:layout_constraintLeft_toRightOf="@+id/height_label_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/experience_attr_text_view" />

        <TextView
            android:id="@+id/is_default_label_text_view"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="@string/is_default_label"
            android:textIsSelectable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height_label_text_view" />


        <TextView
            android:id="@+id/is_default_attr_text_view"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textIsSelectable="true"
            app:layout_constraintLeft_toRightOf="@+id/is_default_label_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/height_attr_text_view" />

        <TextView
            android:id="@+id/order_label_text_view"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="@string/order_label"
            android:textIsSelectable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/is_default_label_text_view" />


        <TextView
            android:id="@+id/order_attr_text_view"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textIsSelectable="true"
            app:layout_constraintLeft_toRightOf="@+id/order_label_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/is_default_attr_text_view" />

        <TextView
            android:id="@+id/weight_label_text_view"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textAppearance="?attr/textAppearanceListItem"
            android:text="@string/weight_label"
            android:textIsSelectable="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_label_text_view" />


        <TextView
            android:id="@+id/weight_attr_text_view"
            style="?android:attr/textAppearanceLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/text_padding"
            android:textAppearance="?attr/textAppearanceListItem"
            android:textIsSelectable="true"
            app:layout_constraintLeft_toRightOf="@+id/weight_label_text_view"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/order_attr_text_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
